[project]
name = "ransomstat-cti"
version = "2.0.0"
description = "Ransomware CTI Dashboard"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
